test/sema/nonmutating-member-function.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

class Foo {
    let i: int;
    // CHECK: [[@LINE+1]]:40: error: cannot initialize variable of type 'mutable Foo&' with 'Foo&'
    func bar() { let f: mutable Foo& = this; }
}
